# cv-analyzer

./: .gitignore  README.md  makefile  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
app/: config.py  main.py  scripts.py
app/clustering/: README.md  app.py  clustering.py  data_types.py  embedding_generator.py
app/db/: core.py
app/search/: service.py
nbs/: 00-generate-data.ipynb  01-eda.ipynb  02-generate-resumes.ipynb  skills.json
