[tool.poetry]
name = "cv-analyser"
version = "0.1.0"
description = ""
authors = ["Robert Siipola <robert@three.consulting>"]
readme = "README.md"
packages = [{include = "cv_analyser"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
openai = "^0.27.0"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
